# app-phone-spam

./: .gitignore  Dockerfile  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
app/: README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/dev/micferna/antispam_app/: History.kt  MainActivity.kt  ReportReceiver.kt  SmsReceiver.kt  SpamAlertActivity.kt  SpamScreeningService.kt
app/android/app/src/main/res/xml/: data_extraction_rules.xml  file_paths.xml
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: api.dart  lookup.dart  main.dart  onboarding.dart  settings.dart
app/test/: widget_test.dart
backend/: Cargo.toml  Dockerfile  deny.toml  docker-compose.yml  eslint.config.js  package-lock.json  package.json  sources.json
backend/scripts/: add-user.js  import.js  print-admin-key.js  update-lists.js
backend/src/: backups.rs  db.js  federation.rs  handlers.rs  lists.rs  main.rs  normalize.js  normalize.rs  operators.js  operators.rs  pages.rs  schema.rs  server.js  sms.js  sms.rs  state.rs  update-lists.js
backend/test/: normalize.test.js
